--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,18 +31,18 @@
                 para um grupo.</p>
             <div class="form">
                 <img src="./img/qrcode-sleep.png"
-                    alt="dragon" class="qrcode un" >
+                    alt="dragon" class="qrcode un">
                 <div class="control">
-                    <button onclick="alert('oi')">
+                    <button value="disparo">
                         disparo em massa
                     </button>
-                    <br/>
-                    <button>
+                    <button value="pegar">
                         pegar contatos de grupo
                     </button>
-                    <div id="opts">
+                   
+                </div>
+                <div id="opts">
 
-                    </div>
                 </div>
             </div>
         </article>
