--- a/public/style/style.css
+++ b/public/style/style.css
@@ -5,13 +5,18 @@
 }
 header{
     width: 100%;
-    background-color: rgba(255, 51, 0, 0.628);
+    background-color: rgba(255, 0, 0, 0.628);
     text-align: center;
+    color:rgb(255, 230, 0);
+    text-shadow: 2px 2px black;
+    border:1px solid #000;
 }
+
 #qrcode{
     border:1px solid #000;
     width: 300px;
     height: 300px;
+    position: relative;
 }
 #qrcode img{
     width: 100%;
@@ -22,6 +27,10 @@ header{
 .rotate{
     animation:load 1s infinite;
 }
+.on{
+    position: absolute;
+    animation:alive 1s infinite;
+}
 @keyframes load {
     0%{
         transform: rotate(0deg);
@@ -29,4 +38,16 @@ header{
     100%{
         transform: rotate(360deg);
     }
+}
+@keyframes alive {
+    0%{
+        top:0
+    }
+    50%{
+       top:20px
+    }
+    100%{
+        top:-5px
+     }
+ 
 }
