--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,12 +33,15 @@
             
             }
             if(msg=='connecting'){
-                img.innerHTML=`<p>startooooo</p>`
+                img.innerHTML=`<img class="rotate" src='https://imagensemoldes.com.br/wp-content/uploads/2020/07/Imagem-Loading-PNG-1024x1024.png'>`
+  
+
             }
-            if(msg=='close'){
+            if(msg=='finish'){
             
-            img.innerHTML=`<img class="rotate" src='https://imagensemoldes.com.br/wp-content/uploads/2020/07/Imagem-Loading-PNG-1024x1024.png'>`
-        }
+                img.innerHTML=` <img class="on" src="./img/icon.png" alt="">`
+  
+            }
 
         })
     </script>
