--- a/public/style/style.css
+++ b/public/style/style.css
@@ -3,20 +3,53 @@
     margin: 0;
     
 }
+body{background-color: black;}
 header{
     width: 100%;
-    background-color: rgba(255, 0, 0, 0.628);
+    background-color: rgb(0, 0, 0);
     text-align: center;
-    color:rgb(255, 230, 0);
-    text-shadow: 2px 2px black;
+    color:rgb(255, 255, 255);
+    text-shadow: 2px 2px 10px rgb(251, 255, 0);
     border:1px solid #000;
+    position: fixed;
+    z-index: 100000000000;
 }
+.conteudo{
+    position: relative;
+    top:30px;
+    display:flex;
+    width: 100%;
+    height: 100vh;
 
+}
+.conteudo::before{
+
+    content: '';
+    display: block;
+    position:absolute;
+    width: 100%;
+    height: 100%;
+    background-image: url('https://www.fatosdesconhecidos.com.br/wp-content/uploads/2018/01/Smaug-1-1024x576.jpg');
+    background-size: cover;
+    filter: opacity(50%);
+}
+aside{
+    position: fixed;
+    width: 250px;
+    display: flex;
+    flex-direction: column;
+  background-color: rgba(4, 0, 0, 0.553);
+    align-items: center;
+    height: 100vh;
+    color:#ff0;
+}
 #qrcode{
     border:1px solid #000;
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
     position: relative;
+    background-color: #fdfd7e;
+    border-radius: 10px;
 }
 #qrcode img{
     width: 100%;
@@ -30,7 +63,9 @@ header{
 .on{
     position: absolute;
     animation:alive 1s infinite;
+
 }
+
 @keyframes load {
     0%{
         transform: rotate(0deg);
@@ -41,13 +76,12 @@ header{
 }
 @keyframes alive {
     0%{
-        top:0
+        top:0;
     }
     50%{
        top:20px
     }
     100%{
-        top:-5px
+        top:-5px;  
      }
- 
 }
