--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,35 +25,21 @@
             </div>
         </aside>
         <section>
-    
+            <h2>
+                &#x1F525;
+                mensagens recentes
+                &#x1F525;
+
+            </h2>
+            <div id="conversas">
+               
+            </div>
         </section>
 
     </div>
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-        const sock = io()
-
-        sock.on('conn', (msg) => {
-        console.log(msg)
-            const img=document.querySelector('#qrcode')
-            const info=document.querySelector('#info')
-           const buttons=document.querySelector('.buttons')
-            if(msg=='init'){
-            img.innerHTML=`<img src='./img/qrcode-start.png'>`
-            
-            }
-            if(msg=='connecting'){
-                img.innerHTML=`<img class="rotate" src='https://imagensemoldes.com.br/wp-content/uploads/2020/07/Imagem-Loading-PNG-1024x1024.png'>`
-  
-
-            }
-            if(msg=='finish'){
-                buttons.innerHTML=`<button id="disconnect">desconectar</button>`
-                img.innerHTML=` <img class="on" src="./img/icon.png" alt="">`
-                info.innerText=`🟢conectado`
-            }
-
-        })
+    <script src="./script/script.js">
+    
     </script>
 </body>
 
