--- a/public/style/style.css
+++ b/public/style/style.css
@@ -66,7 +66,7 @@ aside{
 
 }
 section{
-    
+    overflow-y: scroll;
     position: absolute;
     right: 0;
     width: 70%;
@@ -79,9 +79,10 @@ section h2{
     color: #fff;
 }
 #conversas{
+  
     width: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     align-items: center;
     
 }
@@ -89,18 +90,42 @@ section h2{
     width: 40%;
     background-color: #fff;
     display: flex;
-    margin: 2px;
-    height: 50px;
-    align-items: center;
+    margin: 5px;
+    height: auto;
+
     border-radius: 10px;
-    padding: 2px;
+    padding: 5px;
+    
 }
 .msgs img{
+    padding: 2px;
+    background-color: orange;
     width: 40px;
     margin:2px;
     height: 40px;
     border-radius: 100%;
     border:1px solid #000;
+}
+.control{
+    width: 100px;
+display: inline-block;
+}
+.control button{
+    width: 25px;
+    min-height: 25px;
+    margin: 2px;
+  border-radius: 10px;
+    background-color: gray;
+    border: none;
+    font-size: 18px;
+    transition: 0.5s linear;
+    color:#fff;
+}
+button.send:hover{
+    background-color: green;
+}
+button.close:hover{
+    background-color: red;
 }
 @keyframes load {
     0%{
