--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,71 +1,83 @@
-*{
+* {
     padding: 0;
     margin: 0;
-    
+
 }
-body{background-color: black;}
-header{
+
+body {
+    background-color: black;
+}
+
+header {
     width: 100%;
     background-color: rgb(0, 0, 0);
     text-align: center;
-    color:rgb(255, 255, 255);
+    color: rgb(255, 255, 255);
     text-shadow: 2px 2px 10px rgb(251, 255, 0);
-    border:1px solid #000;
+    border: 1px solid #000;
     position: fixed;
     z-index: 100000000000;
 }
-.conteudo{
+
+.conteudo {
     position: relative;
-    top:30px;
-    display:flex;
+    top: 30px;
+    display: flex;
     width: 100%;
     height: 100vh;
 
 }
-.conteudo::before{
+
+.conteudo::before {
 
     content: '';
     display: block;
-    position:absolute;
+    position: absolute;
     width: 100%;
     height: 100%;
     background-image: url('https://www.fatosdesconhecidos.com.br/wp-content/uploads/2018/01/Smaug-1-1024x576.jpg');
     background-size: cover;
     filter: opacity(50%);
 }
-aside{
+
+aside {
     position: fixed;
     width: 250px;
     display: flex;
     flex-direction: column;
-  background-color: rgba(4, 0, 0, 0.553);
+    background-color: rgba(4, 0, 0, 0.553);
     align-items: center;
     height: 100vh;
-    color:#ff0;
+    color: #ff0;
 }
-#qrcode{
-    border:1px solid #000;
+
+#qrcode {
+    border: 1px solid #000;
     width: 200px;
     height: 200px;
     position: relative;
     background-color: #fdfd7e;
     border-radius: 10px;
 }
-#qrcode img{
+
+#qrcode img {
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.rotate{
-    animation:load 1s infinite;
+
+.rotate {
+    animation: load 1s infinite;
 }
-.on{
+
+.on {
     position: absolute;
-    animation:alive 1s infinite;
+    animation: alive 1s infinite;
 
 }
-section{
+
+section {
     overflow-y: scroll;
     position: absolute;
     right: 0;
@@ -73,76 +85,119 @@ section{
     background-color: rgba(0, 0, 0, 0.508);
     height: 100%;
 }
-section h2{
+
+section h2 {
     margin-top: 10px;
     text-align: center;
     color: #fff;
 }
-#conversas{
-  
+
+#conversas {
+
     width: 100%;
     display: flex;
     flex-direction: column-reverse;
     align-items: center;
-    transition: 0.1s linear;    
+    transition: 0.1s linear;
 }
-.msgs{
+
+.msgs {
     width: 40%;
     background-color: #fff;
     display: flex;
     margin: 5px;
     height: auto;
-transition: 0.5s linear;
+    transition: 0.5s linear;
     border-radius: 10px;
     padding: 5px;
-   
+
 }
-.msgs img{
+
+.msgs img {
     padding: 2px;
     background-color: orange;
     width: 40px;
-    margin:2px;
+    margin: 2px;
     height: 40px;
     border-radius: 100%;
-    border:1px solid #000;
+    border: 1px solid #000;
 }
-.control{
+
+.control {
     width: 100px;
-display: inline-block;
+    display: inline-block;
 }
-button.close,button.send{
+
+button.close, button.send {
     width: 25px;
     max-height: 25px;
     margin: 2px;
-  border-radius: 30px;
+    border-radius: 30px;
     background-color: gray;
     border: none;
     font-size: 18px;
     transition: 0.5s linear;
-    color:#fff;
+    color: #fff;
 }
-button.send:hover{
+
+button.send:hover {
     background-color: green;
 }
-button.close:hover{
+
+button.close:hover {
     background-color: red;
 }
+
+.prompt {
+    z-index: 100000000;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.365);
+    position: absolute;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.prompt textarea {
+    min-width: 50%;
+    min-height: 200px;
+    resize: none;
+    font-size: 12px;
+
+}
+.prompt button{
+    margin-top: 10px;
+    width: 10%;
+    height: 25px;
+}
+.prompt h3{
+    color: #fff;
+    text-shadow: 0px 0px 12px red ;
+}
 @keyframes load {
-    0%{
+    0% {
         transform: rotate(0deg);
     }
-    100%{
+
+    100% {
         transform: rotate(360deg);
     }
 }
+
 @keyframes alive {
-    0%{
-        top:0;
+    0% {
+        top: 0;
     }
-    50%{
-       top:20px
+
+    50% {
+        top: 20px
     }
-    100%{
-        top:-5px;  
-     }
+
+    100% {
+        top: -5px;
+    }
 }
